<resources>
    <string name="app_name">MobileProject</string>
    <string name="introduceApp">당신을 위한 퀠린둬</string>
    <string name="monthly">월간 캘린더</string>
    <string name="searchActivity">모임 찾기</string>
    <string name="hashtag">해시태그</string>
    <string name="input">모임 검색</string>
    <string name="user_recommnad">사용자 맞춤 모임 추천</string>
    <string name="top_recommand">인기 많은 모임</string>
    <string name="detail">상세 정보</string>
    <string name="apply">등록</string>
    <string name="detailGroup">모임 상세 내용</string>
    <string name="email">이메일</string>
    <string name="phoneNum">전화번호</string>
    <string name="sosok">소속</string>
    <string name="nameMoim">모임 이름</string>
    <string name="nametag">관련 태그</string>
    <string name="applyOut">신청하기(외부접수)</string>
    <string name="time">2020.10.06(화) 23:59까지 신청 가능</string>
    <string name="infoMoim">모임 정보</string>
    <string name="infoPeople">개설자 정보</string>
    <string name="askInputHint">비방, 홍보 등의 글은 이용약관 및 관련 법에 의해 제재될 수 있습니다. </string>
    <string name="ask">문의/기대평</string>
    <string name="detailMoim">모임 설명</string>
    <string name="outMoim1">본 공모전은 외부접수 공모전입니다.</string>
    <string name="explainMoim">안녕하세요 공모전 드루와</string>
    <string name="outMoim2">외부접수 페이지에서 공모전 담당자가 기재한 방법 또는 설정한 링크를 통해 참여 신청이 가능합니다.</string>

</resources>