<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivityActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/themeColor">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@color/tutu"
                android:src="@drawable/threebar" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="70dp"
                android:fontFamily="@font/medium"
                android:text="@string/detail"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/detailGroup"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="MissingConstraints">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="160dp"
                        android:layout_marginLeft="160dp"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/nameMoim"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="160dp"
                        android:layout_marginLeft="160dp"
                        android:layout_marginTop="70dp"
                        android:fontFamily="@font/medium"
                        android:text="@string/nametag"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Button
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="160dp"
                        android:layout_marginLeft="160dp"
                        android:layout_marginTop="100dp"
                        android:textSize="11dp"
                        android:backgroundTint="@color/gray"
                        android:fontFamily="@font/medium"
                        android:text="@string/hashtag"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="250dp"
                        android:layout_marginLeft="250dp"
                        android:textSize="11dp"
                        android:layout_marginTop="100dp"
                        android:backgroundTint="@color/gray"
                        android:fontFamily="@font/medium"
                        android:text="@string/hashtag"
                        android:textColor="@color/black" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="20dp"
                        android:src="@drawable/image_border"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium"
                        android:text="@string/time"
                        android:textSize="14sp"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"
                        android:layout_marginStart="15dp" />

                    <TextView
                        android:text="@string/outMoim1"
                        android:fontFamily="@font/bold"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="80dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                    <TextView
                        android:text="@string/outMoim2"
                        android:fontFamily="@font/medium"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="115dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray"
                        android:text="@string/applyOut"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:fontFamily="@font/medium"
                        android:layout_marginTop="180dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_toLeftOf="@+id/heart"
                        />
                    <ImageButton
                        android:id="@+id/heart"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/gray"
                        android:src="@drawable/heart"
                        android:layout_marginTop="180dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_alignParentRight="true"
                        tools:ignore="UnusedAttribute"
                        android:layout_alignParentEnd="true" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_alignParentBottom="true"
                        android:background="@color/gray"
                        android:layout_height="5dp"
                        android:layout_marginTop="235dp"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_marginLeft="20dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tutu"
                    android:text="@string/infoMoim"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    tools:ignore="SmallSp,UnusedAttribute" />

                <Button
                    android:layout_width="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tutu"
                    android:text="@string/infoPeople"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    tools:ignore="SmallSp,UnusedAttribute" />

                <Button
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="0dp"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tutu"
                    android:text="@string/ask"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    tools:ignore="SmallSp,UnusedAttribute" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailMoim"
                    android:textColor="@color/black"
                    android:fontFamily="@font/bold"
                    android:textSize="14dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/explainMoim"
                    android:textColor="@color/black"
                    android:fontFamily="@font/medium"
                    android:textSize="12dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/themeColor"
        app:itemBackground="@color/themeColor"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>